--- a/config.sample.yml
+++ b/config.sample.yml
@@ -106,7 +106,7 @@ bindIP: 0.0.0.0
 # ---------------------------------------------------------------------
 # Possible values: error, warn, info (default), verbose, debug, silly
 
-logLevel: info
+logLevel: $(LOG_LEVEL:info)
 
 # ---------------------------------------------------------------------
 # Offline Mode
