--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -347,6 +347,17 @@ jobs:
         body: ${{ steps.changelog.outputs.changes }}
         token: ${{ github.token }}
         artifacts: 'drop/wiki-js.tar.gz,drop-win/wiki-js-windows.tar.gz'
+        
+    - name: Notify Slack Releases Channel
+      uses: slackapi/slack-github-action@v1.18.0
+      with:
+        payload: |
+          {
+            "text": "Wiki.js ${{ github.ref_name }} has been released."
+          }
+      env:
+        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
 
   build-do-image:
     name: Build DigitalOcean Image
