First parts of reworking ToC Slider
test

Revert "test"

This reverts commit f4959c777a013d2c7966e6cc5b67ee29a067e417.

Revert "First parts of reworking ToC Slider"

This reverts commit 08cb4bd269a628f71f935e812b3980322a9d7303.

Range Slider instead of radio button

range slider in admin-theme

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -53,6 +53,7 @@ defaults:
       theme: 'default'
       iconset: 'md'
       darkMode: false
+      minTocLevel: 0
       tocLevel: 2
       tocCollapseLevel: 2
     auth:
