Add Use Site Default Switch
Use Site Default Switch now changes between usage of page specific toc levels and site specific toc levels per site.
Removed Global selection from range slider of toc level therefor

--- a/server/app/data.yml
+++ b/server/app/data.yml
@@ -58,6 +58,7 @@ defaults:
       minTocLevel: 0
       tocLevel: 2
       tocCollapseLevel: 2
+      doUseTocDefault: true
     auth:
       autoLogin: false
       enforce2FA: false
