refactor: admin editors + flags page to comp api, server cleanup

--- a/package.json
+++ b/package.json
@@ -34,32 +34,32 @@
     "node": ">=16.0"
   },
   "dependencies": {
-    "@azure/storage-blob": "12.2.1",
+    "@azure/storage-blob": "12.9.0",
     "@exlinc/keycloak-passport": "1.0.2",
+    "@graphql-tools/schema": "8.3.7",
+    "@graphql-tools/utils": "8.6.6",
     "@joplin/turndown-plugin-gfm": "1.0.43",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
     "@root/pem": "1.0.4",
     "acme": "3.0.3",
-    "akismet-api": "5.2.1",
-    "algoliasearch": "4.5.1",
+    "akismet-api": "5.3.0",
     "apollo-fetch": "0.7.0",
-    "apollo-server": "2.25.2",
-    "apollo-server-express": "2.25.2",
+    "apollo-server": "3.6.7",
+    "apollo-server-express": "3.6.7",
     "auto-load": "3.0.4",
     "aws-sdk": "2.1111.0",
-    "azure-search-client": "3.1.5",
     "bcryptjs-then": "1.0.1",
     "bluebird": "3.7.2",
-    "body-parser": "1.19.1",
-    "chalk": "4.1.0",
+    "body-parser": "1.20.0",
+    "chalk": "4.1.2",
     "cheerio": "1.0.0-rc.5",
     "chokidar": "3.5.3",
     "chromium-pickle-js": "0.2.0",
     "clean-css": "4.2.3",
     "command-exists": "1.2.9",
     "compression": "1.7.4",
-    "connect-session-knex": "2.0.0",
+    "connect-session-knex": "2.1.1",
     "cookie-parser": "1.4.6",
     "cors": "2.8.5",
     "cuint": "0.2.2",
@@ -69,8 +69,6 @@
     "diff2html": "3.1.14",
     "dompurify": "2.2.7",
     "dotize": "0.3.0",
-    "elasticsearch6": "npm:@elastic/elasticsearch@6",
-    "elasticsearch7": "npm:@elastic/elasticsearch@7",
     "emoji-regex": "9.2.2",
     "eventemitter2": "6.4.5",
     "express": "4.17.3",
@@ -80,11 +78,11 @@
     "filesize": "6.1.0",
     "fs-extra": "9.0.1",
     "getos": "3.2.1",
-    "graphql": "15.3.0",
+    "graphql": "16.3.0",
     "graphql-list-fields": "2.0.2",
-    "graphql-rate-limit-directive": "1.2.1",
-    "graphql-subscriptions": "1.1.0",
-    "graphql-tools": "7.0.0",
+    "graphql-rate-limit-directive": "2.0.2",
+    "graphql-tools": "8.2.5",
+    "graphql-upload": "13.0.0",
     "he": "1.2.0",
     "highlight.js": "10.3.1",
     "i18next": "19.8.3",
@@ -93,14 +91,14 @@
     "image-size": "0.9.2",
     "js-base64": "3.7.2",
     "js-binary": "1.2.0",
-    "js-yaml": "3.14.0",
+    "js-yaml": "4.1.0",
     "jsdom": "16.4.0",
     "jsonwebtoken": "8.5.1",
     "katex": "0.12.0",
-    "klaw": "3.0.0",
+    "klaw": "4.0.1",
     "knex": "1.0.5",
     "lodash": "4.17.21",
-    "luxon": "1.25.0",
+    "luxon": "2.3.1",
     "markdown-it": "11.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-attrs": "3.0.3",
@@ -116,15 +114,15 @@
     "markdown-it-sup": "1.0.0",
     "markdown-it-task-lists": "2.1.1",
     "mathjax": "3.1.2",
-    "mime-types": "2.1.34",
-    "moment": "2.29.1",
+    "mime-types": "2.1.35",
+    "moment": "2.29.2",
     "moment-timezone": "0.5.31",
     "ms": "2.1.3",
     "multer": "1.4.4",
     "nanoid": "3.2.0",
     "node-2fa": "1.1.2",
     "node-cache": "5.1.2",
-    "nodemailer": "6.7.2",
+    "nodemailer": "6.7.3",
     "objection": "3.0.1",
     "passport": "0.4.1",
     "passport-auth0": "1.4.2",
@@ -155,7 +153,7 @@
     "pug": "3.0.2",
     "punycode": "2.1.1",
     "qr-image": "3.2.0",
-    "raven": "2.6.4",
+    "rate-limiter-flexible": "2.3.6",
     "remove-markdown": "0.3.0",
     "request": "2.88.2",
     "request-promise": "4.2.6",
@@ -165,18 +163,15 @@
     "semver": "7.3.6",
     "serve-favicon": "2.5.0",
     "simple-git": "2.21.0",
-    "solr-node": "1.2.1",
-    "ssh2": "1.5.0",
+    "ssh2": "1.9.0",
     "ssh2-promise": "1.0.2",
     "striptags": "3.2.0",
-    "subscriptions-transport-ws": "0.9.18",
     "tar-fs": "2.1.1",
     "turndown": "7.1.1",
     "twemoji": "13.1.0",
     "uslug": "1.0.4",
     "uuid": "8.3.2",
     "validate.js": "0.13.1",
-    "winston": "3.7.2",
     "xss": "1.0.11",
     "yargs": "16.1.0"
   },
@@ -219,10 +214,10 @@
     "babel-plugin-transform-imports": "2.0.0",
     "cache-loader": "4.1.0",
     "canvas-confetti": "1.3.1",
-    "cash-dom": "8.1.0",
+    "cash-dom": "8.1.1",
     "chart.js": "2.9.4",
     "clean-webpack-plugin": "3.0.0",
-    "clipboard": "2.0.8",
+    "clipboard": "2.0.10",
     "codemirror": "5.58.2",
     "copy-webpack-plugin": "6.2.1",
     "core-js": "3.6.5",
@@ -320,10 +315,6 @@
     "write-file-webpack-plugin": "4.5.1",
     "xterm": "4.9.0",
     "zxcvbn": "4.4.2"
-  },
-  "resolutions": {
-    "apollo-server-express/**/graphql-tools": "4.0.8",
-    "graphql": "15.3.0"
   },
   "browserslist": [
     "> 1%",
