feat(helm): Add revisionHistoryLimit

--- a/dev/helm/templates/deployment.yaml
+++ b/dev/helm/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "wiki.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "wiki.selectorLabels" . | nindent 6 }}
