--- a/dev/helm/values.yaml
+++ b/dev/helm/values.yaml
@@ -3,6 +3,7 @@
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
+revisionHistoryLimit: 10
 
 image:
   repository: requarks/wiki
